--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,15 @@
 services:
-  mongodb:
-    image: mongo
-    container_name: my-mongodb
-    ports:
-      - 27017:27017
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: narwahal
-      MONGO_INITDB_ROOT_PASSWORD: narwahal@123
+#  mongodb:
+#    image: mongo
+#    container_name: my-mongodb
+#    ports:
+#      - 27017:27017
+#    environment:
+#      MONGO_INITDB_ROOT_USERNAME: narwahal
+#      MONGO_INITDB_ROOT_PASSWORD: narwahal@123
   backend:
     build:
       dockerfile: Dockerfile
       context: .
     ports:
       - 8000:8000
-    depends_on:
-      - mongodb
